Support multiple pointers in ClutterDragAction.

https://bugzilla.gnome.org/show_bug.cgi?id=653066